@@ -1,250 +1,47 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class oa {
-   public static final aeq<dwh> a = nt.a("village/taiga/town_centers");
-   private static final aeq<dwh> b = nt.a("village/taiga/terminators");
-
-   public static void a(nm<dwh> $$0) {
-      hf<duc> $$1 = $$0.a(jc.ay);
-      he<duc> $$2 = $$1.b(pe.h);
-      he<duc> $$3 = $$1.b(pe.i);
-      he<duc> $$4 = $$1.b(pe.e);
-      he<duc> $$5 = $$1.b(pe.l);
-      he<duc> $$6 = $$1.b(pe.m);
-      hf<dyp> $$7 = $$0.a(jc.aA);
-      he<dyp> $$8 = $$7.b(nu.f);
-      he<dyp> $$9 = $$7.b(nu.d);
-      he<dyp> $$10 = $$7.b(nu.k);
-      he<dyp> $$11 = $$7.b(nu.o);
-      hf<dwh> $$12 = $$0.a(jc.aC);
-      he<dwh> $$13 = $$12.b(nt.a);
-      he<dwh> $$14 = $$12.b(b);
+public interface oa {
+   static void a(np<dvj> $$0) {
+      hh<dvd> $$1 = $$0.a(je.az);
+      hh<cqo> $$2 = $$0.a(je.ap);
+      hg.c<dvj> $$3 = $$0.a(
+         duw.a,
+         new dvj(
+            List.of(dvj.a($$1.b(dux.t)), dvj.a($$1.b(dux.u)), dvj.a($$1.b(dux.v)), dvj.a($$1.b(dux.w)), dvj.a($$1.b(dux.x))), new dvy(34, 8, dvz.a, 10387312)
+         )
+      );
+      $$0.a(duw.b, new dvj($$1.b(dux.f), new dvy(32, 8, dvz.a, 14357617)));
+      $$0.a(duw.c, new dvj($$1.b(dux.g), new dvy(32, 8, dvz.a, 14357618)));
+      $$0.a(duw.d, new dvj($$1.b(dux.e), new dvy(32, 8, dvz.a, 14357619)));
+      $$0.a(duw.e, new dvj($$1.b(dux.j), new dvy(32, 8, dvz.a, 14357620)));
+      $$0.a(duw.f, new dvj($$1.b(dux.a), new dvy(ib.g, dwa.c.b, 0.2F, 165745296, Optional.of(new dwa.a($$3, 10)), 32, 8, dvz.a)));
+      $$0.a(duw.q, new dvj($$1.b(dux.F), new dvy(24, 8, dvz.a, 20083232)));
+      $$0.a(duw.g, new dvj($$1.b(dux.l), new dvy(32, 5, dvz.b, 10387313)));
+      $$0.a(duw.h, new dvj($$1.b(dux.d), new dvy(80, 20, dvz.b, 10387319)));
+      $$0.a(duw.i, new dvj($$1.b(dux.r), new dvy(new ib(9, 0, 9), dwa.c.c, 0.01F, 0, Optional.empty(), 1, 0, dvz.a)));
+      $$0.a(duw.j, new dvj(List.of(dvj.a($$1.b(dux.b)), dvj.a($$1.b(dux.c))), new dvy(ib.g, dwa.c.d, 0.004F, 0, Optional.empty(), 1, 0, dvz.a)));
       $$0.a(
-         a,
-         new dwh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(dwf.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(dwf.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(dwf.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
+         duw.k,
+         new dvj(
+            List.of(
+               dvj.a($$1.b(dux.y)),
+               dvj.a($$1.b(dux.z)),
+               dvj.a($$1.b(dux.A)),
+               dvj.a($$1.b(dux.B)),
+               dvj.a($$1.b(dux.C)),
+               dvj.a($$1.b(dux.D)),
+               dvj.a($$1.b(dux.E))
             ),
-            dwh.a.b
+            new dvy(40, 15, dvz.a, 34222645)
          )
       );
-      nt.a(
-         $$0,
-         "village/taiga/streets",
-         new dwh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(dwf.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(dwf.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(dwf.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(dwf.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(dwf.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(dwf.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(dwf.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(dwf.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(dwf.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(dwf.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(dwf.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(dwf.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(dwf.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(dwf.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(dwf.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            dwh.a.a
-         )
-      );
-      nt.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new dwh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(dwf.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(dwf.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(dwf.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(dwf.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(dwf.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(dwf.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(dwf.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(dwf.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(dwf.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(dwf.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(dwf.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(dwf.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(dwf.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(dwf.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(dwf.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            dwh.a.a
-         )
-      );
-      nt.a(
-         $$0,
-         "village/taiga/houses",
-         new dwh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(dwf.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(dwf.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(dwf.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(dwf.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(dwf.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(dwf.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(dwf.g(), 6)
-               }
-            ),
-            dwh.a.b
-         )
-      );
-      nt.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new dwh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(dwf.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(dwf.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(dwf.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(dwf.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(dwf.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(dwf.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(dwf.g(), 6)
-               }
-            ),
-            dwh.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new dwh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(dwf.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(dwf.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(dwf.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            dwh.a.a
-         )
-      );
-      nt.a(
-         $$0,
-         "village/taiga/decor",
-         new dwh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(dwf.a($$2), 4),
-               Pair.of(dwf.a($$3), 4),
-               Pair.of(dwf.a($$4), 2),
-               Pair.of(dwf.a($$5), 4),
-               Pair.of(dwf.a($$6), 1),
-               new Pair[]{Pair.of(dwf.g(), 4)}
-            ),
-            dwh.a.b
-         )
-      );
-      nt.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new dwh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(dwf.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(dwf.a($$2), 4),
-               Pair.of(dwf.a($$3), 4),
-               Pair.of(dwf.a($$4), 2),
-               Pair.of(dwf.a($$5), 4),
-               Pair.of(dwf.a($$6), 1),
-               Pair.of(dwf.g(), 4)
-            ),
-            dwh.a.b
-         )
-      );
-      nt.a(
-         $$0,
-         "village/taiga/villagers",
-         new dwh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwf.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(dwf.a("village/taiga/villagers/baby"), 1),
-               Pair.of(dwf.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            dwh.a.b
-         )
-      );
-      nt.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new dwh(
-            $$13,
-            ImmutableList.of(Pair.of(dwf.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(dwf.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            dwh.a.b
-         )
-      );
+      $$0.a(duw.l, new dvj(List.of(dvj.a($$1.b(dux.h)), dvj.a($$1.b(dux.i))), new dvy(24, 4, dvz.a, 165745295)));
+      $$0.a(duw.m, new dvj(List.of(dvj.a($$1.b(dux.m)), dvj.a($$1.b(dux.n))), new dvy(20, 8, dvz.a, 14357621)));
+      $$0.a(duw.n, new dvj(List.of(dvj.a($$1.b(dux.o), 2), dvj.a($$1.b(dux.s), 3)), new dvy(27, 4, dvz.a, 30084232)));
+      $$0.a(duw.o, new dvj($$1.b(dux.p), new dvy(2, 1, dvz.a, 14357921)));
+      $$0.a(duw.p, new dvj($$1.b(dux.q), new dvy(20, 11, dvz.b, 10387313)));
+      $$0.a(duw.r, new dvj($$1.b(dux.k), new dvx(32, 3, 128, $$2.b(apn.o))));
+      $$0.a(duw.s, new dvj($$1.b(dux.G), new dvy(34, 8, dvz.a, 83469867)));
    }
 }
