@@ -1,53 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class oo {
-   public static final aeq<dmz<?, ?>> a = om.a("delta");
-   public static final aeq<dmz<?, ?>> b = om.a("small_basalt_columns");
-   public static final aeq<dmz<?, ?>> c = om.a("large_basalt_columns");
-   public static final aeq<dmz<?, ?>> d = om.a("basalt_blobs");
-   public static final aeq<dmz<?, ?>> e = om.a("blackstone_blobs");
-   public static final aeq<dmz<?, ?>> f = om.a("glowstone_extra");
-   public static final aeq<dmz<?, ?>> g = om.a("crimson_forest_vegetation");
-   public static final aeq<dmz<?, ?>> h = om.a("crimson_forest_vegetation_bonemeal");
-   public static final aeq<dmz<?, ?>> i = om.a("warped_forest_vegetation");
-   public static final aeq<dmz<?, ?>> j = om.a("warped_forest_vegetation_bonemeal");
-   public static final aeq<dmz<?, ?>> k = om.a("nether_sprouts");
-   public static final aeq<dmz<?, ?>> l = om.a("nether_sprouts_bonemeal");
-   public static final aeq<dmz<?, ?>> m = om.a("twisting_vines");
-   public static final aeq<dmz<?, ?>> n = om.a("twisting_vines_bonemeal");
-   public static final aeq<dmz<?, ?>> o = om.a("weeping_vines");
-   public static final aeq<dmz<?, ?>> p = om.a("patch_crimson_roots");
-   public static final aeq<dmz<?, ?>> q = om.a("basalt_pillar");
-   public static final aeq<dmz<?, ?>> r = om.a("spring_lava_nether");
-   public static final aeq<dmz<?, ?>> s = om.a("spring_nether_closed");
-   public static final aeq<dmz<?, ?>> t = om.a("spring_nether_open");
-   public static final aeq<dmz<?, ?>> u = om.a("patch_fire");
-   public static final aeq<dmz<?, ?>> v = om.a("patch_soul_fire");
+   public static final aet<dne<?, ?>> a = op.a("end_spike");
+   public static final aet<dne<?, ?>> b = op.a("end_gateway_return");
+   public static final aet<dne<?, ?>> c = op.a("end_gateway_delayed");
+   public static final aet<dne<?, ?>> d = op.a("chorus_plant");
+   public static final aet<dne<?, ?>> e = op.a("end_island");
 
-   public static void a(nm<dmz<?, ?>> $$0) {
-      om.a($$0, a, dnm.Z, new dpm(csm.H.n(), csm.kJ.n(), bgb.a(3, 7), bgb.a(0, 2)));
-      om.a($$0, b, dnm.Y, new dpk(bfs.a(1), bgb.a(1, 4)));
-      om.a($$0, c, dnm.Y, new dpk(bgb.a(2, 3), bgb.a(5, 10)));
-      om.a($$0, d, dnm.aa, new dqf(csm.dW.n(), csm.dZ.n(), bgb.a(3, 7)));
-      om.a($$0, e, dnm.aa, new dqf(csm.dW.n(), csm.pr.n(), bgb.a(3, 7)));
-      om.a($$0, f, dnm.t);
-      dsb $$1 = new dsb(bfa.<dez>a().a(csm.oD.n(), 87).a(csm.ox.n(), 11).a(csm.oo.n(), 1));
-      om.a($$0, g, dnm.V, new dpw($$1, 8, 4));
-      om.a($$0, h, dnm.V, new dpw($$1, 3, 1));
-      dsb $$2 = new dsb(bfa.<dez>a().a(csm.oq.n(), 85).a(csm.oD.n(), 1).a(csm.oo.n(), 13).a(csm.ox.n(), 1));
-      om.a($$0, i, dnm.V, new dpw($$2, 8, 4));
-      om.a($$0, j, dnm.V, new dpw($$2, 3, 1));
-      om.a($$0, k, dnm.V, new dpw(drr.a(csm.or), 8, 4));
-      om.a($$0, l, dnm.V, new dpw(drr.a(csm.or), 3, 1));
-      om.a($$0, m, dnm.X, new dqn(8, 4, 8));
-      om.a($$0, n, dnm.X, new dqn(3, 1, 2));
-      om.a($$0, o, dnm.W);
-      om.a($$0, p, dnm.i, om.a(dnm.S, new dqi(drr.a(csm.oD))));
-      om.a($$0, q, dnm.ad);
-      om.a($$0, r, dnm.k, new dql(ead.e.g(), true, 4, 1, hi.a(csl::q, csm.dW, csm.dX, csm.L, csm.kJ, csm.pr)));
-      om.a($$0, s, dnm.k, new dql(ead.e.g(), false, 5, 0, hi.a(csl::q, csm.dW)));
-      om.a($$0, t, dnm.k, new dql(ead.e.g(), false, 4, 1, hi.a(csl::q, csm.dW)));
-      om.a($$0, u, dnm.i, om.a(dnm.S, new dqi(drr.a(csm.cr)), List.of(csm.dW)));
-      om.a($$0, v, dnm.i, om.a(dnm.S, new dqi(drr.a(csm.cs)), List.of(csm.dY)));
+   public static void a(np<dne<?, ?>> $$0) {
+      op.a($$0, a, dnr.J, new dqp(false, ImmutableList.of(), null));
+      op.a($$0, b, dnr.L, dpu.a(akn.a, true));
+      op.a($$0, c, dnr.L, dpu.a());
+      op.a($$0, d, dnr.l);
+      op.a($$0, e, dnr.K);
    }
 }
